# EntraPerm

./: .gitignore  README.md  entraperm.py  pyproject.toml  setup.py
data/: default_results.csv
entraperm/data/: collected_actions.json
